# robot_arm

./: README.md
src/bazu/: package.xml  setup.cfg  setup.py
src/bazu/config/: controller.yaml
src/bazu/launch/: gazebo_bazu.launch.py  rviz_bazu.launch.py  test_gazebo.launch.py
src/bazu/rviz/: rviz_basic_settings.rviz
src/bazu/urdf/: bazu.urdf
src/bazu/wolrd/: empty.wolrd
